--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "encore/laravel-admin",
-    "description": "laravel admin",
+    "name": "shushushushushu/laravel-admin",
+    "description": "shushushushushu laravel admin",
     "type": "library",
     "keywords": ["laravel", "admin", "grid", "form"],
-    "homepage": "https://github.com/z-song/laravel-admin",
+    "homepage": "https://github.com/shushushushushu/laravel-admin",
     "license": "MIT",
     "authors": [
         {
-            "name": "zsong",
-            "email": "zosong@126.com"
+            "name": "shushushushushu",
+            "email": "shushushushushu@126.com"
         }
     ],
     "require": {
